# sumo_traci_generate_accident

./: README.md  main.py  pyproject.toml
src/: accident.py  app.py  config.py
src/sumo_files/: road.net.xml  route.rou.xml  trips.trips.xml
